[FIXED HUDSON-6534] spacing and hover-background for parameters page, based on patch from jacob_robertson.
git-svn-id: https://hudson.dev.java.net/svn/hudson/trunk/hudson/main@31785 71c3de6d-444a-0410-be80-ed276b4c234a

--- a/war/resources/css/style.css
+++ b/war/resources/css/style.css
@@ -538,6 +538,24 @@ div.behavior-loading {
   text-align: left;
 }
 
+/* ============================ parameters form ========================== */
+
+table.parameters {
+  border-collapse: collapse;
+}
+
+table.parameters > tbody > tr:first-child > td {
+  padding-top: 4px;
+}
+
+table.parameters .setting-description {
+  padding-bottom: 4px;
+}
+
+table.parameters > tbody:hover {
+  background-color: #f0f0f0;
+}
+
 /* ============================ health report hover ========================== */
 
 .healthReport a {
